--- a/data/projects.json
+++ b/data/projects.json
@@ -16,7 +16,7 @@
             "#D8D8D6"
         ],
         "images" : {
-            "logo" : "./data/projects/the-calin/images/logo.svg",
+            "logo" : "./data/projects/the-calin/images/top.jpg",
             "top" : "./data/projects/the-calin/images/top.jpg",
             "left" : "./data/projects/the-calin/images/left.jpg",
             "right" : "./data/projects/the-calin/images/right.jpg"
@@ -47,7 +47,7 @@
             "#008384"
         ],
         "images": {
-            "logo": "./data/projects/les-affranchis/images/logo.svg",
+            "logo": "./data/projects/les-affranchis/images/top.jpg",
             "top": "./data/projects/les-affranchis/images/top.jpg",
             "left": "./data/projects/les-affranchis/images/left.jpg",
             "right": "./data/projects/les-affranchis/images/right.jpg"
@@ -78,7 +78,7 @@
             "#2C3288"
         ],
         "images" : {
-            "logo": "./data/projects/malika-favre/images/logo.svg",
+            "logo": "./data/projects/malika-favre/images/top.jpg",
             "top" : "./data/projects/malika-favre/images/top.jpg",
             "left" : "./data/projects/malika-favre/images/left.jpg",
             "right" : "./data/projects/malika-favre/images/right.jpg"
@@ -106,7 +106,7 @@
             "#FFFFFF"
         ],
         "images" : {
-            "logo": "./data/projects/ma-vraie-nature/images/logo.svg",
+            "logo": "./data/projects/ma-vraie-nature/images/top.jpg",
             "top" : "./data/projects/ma-vraie-nature/images/top.jpg",
             "left" : "./data/projects/ma-vraie-nature/images/left.jpg",
             "right" : "./data/projects/ma-vraie-nature/images/right.jpg"
@@ -137,7 +137,7 @@
             "#3096AF"
         ],
         "images" : {
-            "logo": "./data/projects/dauphins-mayennais/images/logo.svg",
+            "logo": "./data/projects/dauphins-mayennais/images/top.jpg",
             "top" : "./data/projects/dauphins-mayennais/images/top.jpg",
             "left" : "./data/projects/dauphins-mayennais/images/left.jpg",
             "right" : "./data/projects/dauphins-mayennais/images/right.jpg"
@@ -168,7 +168,7 @@
             "#3AB3AD"
         ],
         "images" : {
-            "logo": "./data/projects/ecole-togo/images/logo.svg",
+            "logo": "./data/projects/ecole-togo/images/top.jpg",
             "top" : "./data/projects/ecole-togo/images/top.jpg",
             "left" : "./data/projects/ecole-togo/images/left.jpg",
             "right" : "./data/projects/ecole-togo/images/right.jpg"
@@ -198,7 +198,7 @@
             "#FFFFFF"
         ],
         "images" : {
-            "logo": "./data/projects/vahalla-piercing/images/logo.svg",
+            "logo": "./data/projects/vahalla-piercing/images/top.jpg",
             "top" : "./data/projects/vahalla-piercing/images/top.jpg",
             "left" : "./data/projects/vahalla-piercing/images/left.jpg",
             "right" : "./data/projects/vahalla-piercing/images/right.jpg"
@@ -229,7 +229,7 @@
             "#1D1D1B"
         ],
         "images" : {
-            "logo": "./data/projects/pierre-et-le-loup/images/logo.svg",
+            "logo": "./data/projects/pierre-et-le-loup/images/top.jpg",
             "top" : "./data/projects/pierre-et-le-loup/images/top.jpg",
             "left" : "./data/projects/pierre-et-le-loup/images/left.jpg",
             "right" : "./data/projects/pierre-et-le-loup/images/right.jpg"
@@ -260,7 +260,7 @@
             "#D8D8D6"
         ],
         "images" : {
-            "logo": "./data/projects/relais-saint-medard/images/logo.svg",
+            "logo": "./data/projects/relais-saint-medard/images/top.jpg",
             "top" : "./data/projects/relais-saint-medard/images/top.jpg",
             "left" : "./data/projects/relais-saint-medard/images/left.jpg",
             "right" : "./data/projects/relais-saint-medard/images/right.jpg"
@@ -277,7 +277,7 @@
         }
     },
     "mastermind": {
-        "public": false,
+        "public": true,
         "category": "web",
         "slug": "mastermind",
         "title": "Mastermind",
@@ -291,7 +291,7 @@
             "#FFFFFF"
         ],
         "images": {
-            "logo": "./data/projects/mastermind/images/logo.svg",
+            "logo": "./data/projects/mastermind/images/top.jpg",
             "top": "./data/projects/mastermind/images/top.jpg",
             "left": "./data/projects/mastermind/images/left.jpg",
             "right": "./data/projects/mastermind/images/right.jpg"
@@ -305,7 +305,7 @@
         }
     },
     "aeromodelisme53": {
-        "public": false,
+        "public": true,
         "category": "print",
         "slug": "aeromodelisme53",
         "title": "Aéromodélisme 53",
@@ -318,7 +318,7 @@
             "#C2C8CF"
         ],
         "images": {
-            "logo": "./data/projects/aeromodelisme-53/images/logo.svg",
+            "logo": "./data/projects/aeromodelisme-53/images/top.jpg",
             "top": "./data/projects/aeromodelisme-53/images/top.jpg",
             "left": "./data/projects/aeromodelisme-53/images/left.jpg",
             "right": "./data/projects/aeromodelisme-53/images/right.jpg"
